put .ds_store into gitignore

--- a/src/sass/_borders.sass
+++ b/src/sass/_borders.sass
@@ -14,7 +14,8 @@
 .bt
     border-top: $border-width solid
 .bb
-    border-top: $border-width solid
+    border-bottom: $border-width solid
+
 
 .r
     border-radius: $border-radius
