--- a/src/sass/_defaults.sass
+++ b/src/sass/_defaults.sass
@@ -10,6 +10,11 @@ $head-font: $text-font !default
 $optical-compensation: 25/24 !default
 $hunit: $optical-compensation * $unit
 
+// colors
+$text-fg: #333
+$text-bg: #fff
+
+
 // borders
 $border-radius: $unit / 2 !default
 $border-width: 1px !default
@@ -22,8 +27,8 @@ $breadcrumbs-spacer: '/' !default
 $text-base-fontsize: $unit * 2 / $text-leading
 $head-base-fontsize: $unit * 2 / $head-leading
 
-$largestPhone: 768px
-$largestTablet: 991px
-$largestLaptop: 1200px
+$phone2tablet: 600px
+$tablet2laptop: 900px
+$laptop2desktop: 1500px
 
 
