--- a/src/sass/_minireset.sass
+++ b/src/sass/_minireset.sass
@@ -11,6 +11,7 @@ li,
 dl,
 dt,
 dd,
+div,
 blockquote,
 figure,
 fieldset,
@@ -27,8 +28,11 @@ h5,
 h6
   margin: 0
   padding: 0
-// radius
-  border-radius: $border-radius
+  // std-color
+  color: $text-fg
+
+a
+  text-decoration: none
 
 // Headings
 h1,
