--- a/src/bedrock.sass
+++ b/src/bedrock.sass
@@ -6,21 +6,26 @@
 @import sass/_spacing
 @import sass/_tables
 @import sass/_borders
+@import sass/_layout
 @import sass/_utility-export
 
 @include typography('')
 @include paddings-and-margins('')
 
+@media (min-width: $phone2tablet)
+    @include typography('md\\:')
+    @include paddings-and-margins('md\\:')
+@media (min-width: $tablet2laptop)
+    @include typography('lg\\:')
+    @include paddings-and-margins('lg\\:')
+@media (min-width: $laptop2desktop)
+    @include typography('xl\\:')
+    @include paddings-and-margins('desktop\:')
 
-// @media only screen and (max-width: $largestPhone)
-//     @include typography('phone\:')
-//     @include paddings-and-margins('phone\:')
-// @media only screen and (min-width: $largestPhone + 1) and (max-width: $largestTablet)
-//     @include typography('table\t:')
-//     @include paddings-and-margins('tablet\:')
-// @media only screen and (min-width: $largestTablet + 1) and (max-width: $largestLaptop)
-//     @include typography('tablet\:')
-//     @include paddings-and-margins('laptop\:')
-// @media only screen and (min-width: $largestTablet + 1)
-//     @include typography('tablet\:')
-//     @include paddings-and-margins('tablet\:')
+
+// remove when color system is compelte
+.bg-sec
+    color: $text-bg
+    background-color: $text-fg
+    a
+        color: $text-bg
