--- a/src/sass/_defaults.sass
+++ b/src/sass/_defaults.sass
@@ -1,6 +1,12 @@
+$text-size-lower-bound-px: 16 !default
+$text-size-upper-bound-px: 20 !default
 
-$unit: 12px !default
+$rem-grow-start-px: 500 !default
+$rem-grow-end-px: 1200 !default
+
 $text-leading: 1.5 !default
+
+$unit: $text-leading * 0.5rem !default
 $head-leading: $text-leading !default
 
 // https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/
