--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -54,3 +54,6 @@ body
         font: $head-font
         font-size: $head-base-fontsize * 4.75
         line-height: $unit * 7
+
+.text-align-center
+    text-align: center
