--- a/src/sass/_borders.sass
+++ b/src/sass/_borders.sass
@@ -1,20 +1,28 @@
-
 .b
-    border: $border-width solid
+    border-width: $border-width
+    border-style: solid
 .bx
-    border-left: $border-width solid
-    border-right: $border-width solid
+    border-left-width: $border-width
+    border-left-style: solid
+    border-right-width: $border-width
+    border-right-style: solid
 .by
-    border-top: $border-width solid
-    border-bottom: $border-width solid
+    border-top-width: $border-width
+    border-top-style: solid
+    border-bottom-width: $border-width
+    border-top-style: solid
 .bl
-    border-left: $border-width solid
+    border-left-width: $border-width
+    border-left-style: solid
 .br
-    border-right: $border-width solid
+    border-right-width: $border-width
+    border-right-style: solid
 .bt
-    border-top: $border-width solid
+    border-top-width: $border-width
+    border-top-style: solid
 .bb
-    border-bottom: $border-width solid
+    border-bottom-width: $border-width
+    border-bottom-style: solid
 
 
 .r
