buttons and stuff

--- a/src/sass/_borders.sass
+++ b/src/sass/_borders.sass
@@ -24,7 +24,6 @@
     border-bottom-width: $border-width
     border-bottom-style: solid
 
-
 .r
     border-radius: $border-radius
 .rt
@@ -35,3 +34,14 @@
     border-radius: $border-radius 0 0 $border-radius
 .rr
     border-radius: 0 $border-radius $border-radius 0 
+
+.r-circle
+    border-radius: $unit $hunit $hunit $unit
+.rt-circle
+    border-radius: $unit $hunit 0 0
+.rb-circle
+    border-radius: 0 0 $hunit $unit
+.rl-circle
+    border-radius: $unit 0 0 $unit
+.rr-circle
+    border-radius: 0 $hunit $hunit 0
