taenzer medien color scheme

--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -45,4 +45,5 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
 @include color-combination('text', $text-color)
 @include color-combination('prim', $primary-color)
 @include color-combination('sec', $secondary-color)
+@include color-combination('ter', $secondary-color)
 @include color-combination('err', $error-color)
