--- a/src/sass/_defaults.sass
+++ b/src/sass/_defaults.sass
@@ -21,8 +21,9 @@ $hunit: $optical-compensation * $unit
 // background and accent. variants are generated on the fly
 
 $text-color: ( 'fg': #444, 'bg': #fff, 'accent': #555) !default
-$primary-color: ( 'fg': #fff, 'bg': #00635a, 'accent': #fff) !default
-$secondary-color: ( 'fg': #fff, 'bg': #3d6dae, 'accent': #fff) !default
+$primary-color: ( 'fg': #fff, 'bg': #3CACD3, 'accent': #fff) !default
+$secondary-color: ( 'fg': #fff, 'bg': #3DC18E, 'accent': #fff) !default
+$tertiary-color: ( 'fg': #fff, 'bg': #154150, 'accent': #fff) !default
 $error-color: ( 'fg': #fff, 'bg': #B03040, 'accent': #fff) !default
 $border-darken: 20%
 
