--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -1,15 +1,17 @@
 @charset "utf-8"
 
-@import sass/_defaults
-@import sass/_minireset
-@import sass/_colors
-@import sass/_typography
-@import sass/_spacing
-@import sass/_tables
-@import sass/_borders
-@import sass/_layout
-@import sass/_code
-@import sass/_utility-export
+@import utilities/_defaults
+@import utilities/_minireset
+@import utilities/_colors
+@import utilities/_typography
+@import utilities/_spacing
+@import utilities/_tables
+@import utilities/_borders
+@import utilities/_layout
+@import utilities/_code
+@import utilities/_utility-export
+
+@import generic-components/menu
 
 @include typography('')
 @include paddings-and-margins('')
