--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -1,15 +1,16 @@
 @charset "utf-8"
 
-@import utilities/_defaults
-@import utilities/_minireset
-@import utilities/_colors
-@import utilities/_typography
-@import utilities/_spacing
-@import utilities/_tables
-@import utilities/_borders
-@import utilities/_layout
-@import utilities/_code
-@import utilities/_utility-export
+@import globals/defaults
+@import globals/minireset
+@import globals/colors
+
+@import utilities/typography
+@import utilities/spacing
+@import utilities/tables
+@import utilities/borders
+@import utilities/layout
+@import utilities/code
+@import utilities/utility-export
 
 @import generic-components/menu
 
