flex layout utilities

--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -12,23 +12,43 @@
     flex-wrap: wrap-reverse
 
 
-.flex-start
+.flex-start:
     justify-content: flex-start
+    align-items: flex-start
+.flex-start-x
+    justify-content: flex-start
+.flex-start-y
+    align-items: flex-start
 
 .flex-end
     justify-content: flex-end
+    align-items: flex-end
+.flex-end-x
+    justify-content: flex-end
+.flex-end-y
+    align-items: flex-end
+
 
 .center
     justify-content: center
+    align-items: center
+.center-x
+    justify-content: center
+.center-y
+    align-items: center
+
 
 .space-between
     justify-content: space-between
-
 .space-around
     justify-content: space-around
-
 .space-evenly
     justify-content: space-evenly
+
+.baseline
+    align-items: baseline
+.stretch
+    align-items: stretch
 
 // widths
 .w\=full
