add wrapper and full bleed utility

--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -41,6 +41,7 @@ $breadcrumbs-spacer: '/' !default
 $text-base-fontsize: $unit * 2 / $text-leading
 $head-base-fontsize: $unit * 2 / $head-leading
 
+$site-width: 35em;
 $phone2tablet: 600px
 $tablet2laptop: 900px
 $laptop2desktop: 1500px
