--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -34,6 +34,17 @@
 .w\=full
     width: 100%
 
+.w\=site
+    max-width: $site-width
+    margin-left: auto
+    margin-right: auto
+
+.w\=viewport
+    width: 100vw
+    margin-left: 50%
+    transform: translateX(-50%)
+
+
 // widths
 @for $denom from 2 through 12
     .w\=1\/#{ $denom }
