--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -12,7 +12,7 @@
     flex-wrap: wrap-reverse
 
 
-.flex-start:
+.flex-start
     justify-content: flex-start
     align-items: flex-start
 .flex-start-x
