--- a/src/sass/utilities/_typography.sass
+++ b/src/sass/utilities/_typography.sass
@@ -20,37 +20,39 @@ body
         line-height: 2 * $unit * 0.75
         font-size: $text-base-fontsize * 0.75
 
-    .#{$class}head-l
-        font: $head-font
-        font-size: $head-base-fontsize * 1.25
-        line-height: $unit * 2
-
-    .#{$class}head
+    .#{$class}head,
+    h6
         font: $head-font
         font-size: $head-base-fontsize
         line-height: $unit * 2
 
-    .#{$class}head-l
+    .#{$class}head-l,
+    h5
         font: $head-font
         font-size: $head-base-fontsize * 1.25
         line-height: $unit * 2
 
-    .#{$class}head-xl
+    .#{$class}head-xl,
+    h4
         font: $head-font
         font-size: $head-base-fontsize * 1.75
         line-height: $unit * 3
 
-    .#{$class}head-xxl, .#{$class}head-2xl
+    .#{$class}head-xxl,
+    .#{$class}head-2xl,
+    h3
         font: $head-font
         font-size: $head-base-fontsize * 2.5
         line-height: $unit * 4
         
-    .#{$class}head-3xl
+    .#{$class}head-3xl,
+    h2
         font: $head-font
         font-size: $head-base-fontsize * 3
         line-height: $unit * 5
 
-    .#{$class}head-4xl
+    .#{$class}head-4xl,
+    h1
         font: $head-font
         font-size: $head-base-fontsize * 4.75
         line-height: $unit * 7
