--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -34,6 +34,8 @@ select,
 textarea
   margin: 0
   padding: 0
+
+body 
   font-family: $text-font
   // std-color
   color: map-get($text-color, 'fg')
