--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -94,6 +94,14 @@
 
     .#{$class}w\=full
         width: 100%
+
+    .#{$class}h\=full
+        height: 100%
+
+    .#{$class}h\=viewport
+        height: 100vh
+
+
     
     $denoms: 2, 3, 4, 6, 8, 12
 
