--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -9,6 +9,14 @@
     .#{$class}fixed
         position: fixed
 
+    .#{$class}sticky-t
+        top: 0px
+        position: sticky
+
+    .#{$class}sticky-b
+        bottom: 0px
+        position: sticky
+
     // displays
     .#{$class}block
         display: block
