--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -24,17 +24,19 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
   @return max($backLum, $foreLum) / min($backLum, $foreLum)
 
 
-=color_combination($name, $palette)
-  $contrast-fg-bg: contrast(map-get($palette, 'fg'), map-get($palette, 'bg'))
-  $contrast-accent-bg: contrast(map-get($palette, 'accent'), map-get($palette, 'bg'))
-  @if $contrast-fg-bg <= 4.5
-    @warn 'c-#{$name}: contrast between background and foreground is #{$contrast-fg-bg}, but it should be at least 4.5'
-  @else
-    @debug 'c-#{$name}: contrast between background and foreground is #{$contrast-fg-bg}'
-  @if $contrast-accent-bg <= 4.5
-    @warn 'c-#{$name}: contrast between accent and foreground is #{$contrast-accent-bg}, but it should be at least 4.5'
-  @else
-    @debug 'c-#{$name}: contrast between accent and foreground is #{$contrast-accent-bg}'
+
+=color_combination($name, $palette, $check-colors: false)
+  @if $check-colors
+    $contrast-fg-bg: contrast(map-get($palette, 'fg'), map-get($palette, 'bg'))
+    $contrast-accent-bg: contrast(map-get($palette, 'accent'), map-get($palette, 'bg'))
+    @if $contrast-fg-bg <= 4.5
+      @warn 'c-#{$name}: contrast between background and foreground is #{$contrast-fg-bg}, but it should be at least 4.5'
+    @else
+      @debug 'c-#{$name}: contrast between background and foreground is #{$contrast-fg-bg}'
+    @if $contrast-accent-bg <= 4.5
+      @warn 'c-#{$name}: contrast between accent and foreground is #{$contrast-accent-bg}, but it should be at least 4.5'
+    @else
+      @debug 'c-#{$name}: contrast between accent and foreground is #{$contrast-accent-bg}'
   .c\=#{$name}
     color: map-get($palette, 'fg')
     background-color: map-get($palette, 'bg')
@@ -42,8 +44,8 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
     a
       color: map-get($palette, 'accent')
 
-@include color-combination('text', $text-color)
-@include color-combination('prim', $primary-color)
-@include color-combination('sec', $secondary-color)
-@include color-combination('ter', $tertiary-color)
-@include color-combination('err', $error-color)
+@include color-combination('text', $text-color, true)
+@include color-combination('prim', $primary-color, true)
+@include color-combination('sec', $secondary-color, true)
+@include color-combination('ter', $tertiary-color, true)
+@include color-combination('err', $error-color, true)
