--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -25,6 +25,8 @@ $hunit: $optical-compensation * $unit
 // background and accent. variants are generated on the fly
 
 $text-color: ( 'fg': #444, 'bg': #fff, 'accent': #555) !default
+$text-bg-accent-darken: 5%
+
 $primary-color: ( 'fg': #fff, 'bg': #3CACD3, 'accent': #fff) !default
 $secondary-color: ( 'fg': #fff, 'bg': #3DC18E, 'accent': #fff) !default
 $tertiary-color: ( 'fg': #fff, 'bg': #154150, 'accent': #fff) !default
