--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -35,13 +35,22 @@ textarea
   margin: 0
   padding: 0
 
-body 
+body,
+input,
+textarea,
+button
   font-family: $text-font
   // std-color
   color: map-get($text-color, 'fg')
   font-size: $text-base-fontsize
   line-height: 2 * $unit
   border-color: darken(map-get($text-color, 'bg'), $border-darken)
+
+
+input,
+textarea,
+button
+    background-color: darken(map-get($text-color, 'bg'), $text-bg-accent-darken)
 
 a
   text-decoration: none
