--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -9,7 +9,12 @@
     .#{$class}fixed
         position: fixed
 
-    .#{$class}sticky-t
+    .#{$class}sticky,
+        bottom: 0px
+        top: 0px
+        position: sticky
+
+    .#{$class}sticky-t,
         top: 0px
         position: sticky
 
