--- a/src/sass/bedrock.sass
+++ b/src/sass/bedrock.sass
@@ -14,6 +14,8 @@
 @import utilities/utility-export
 
 @import generic-components/menu
+@import generic-components/menu-toggle
+
 
 @include typography('')
 @include layout('')
