--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -53,3 +53,5 @@ $tablet2laptop: convert(900px)
 $laptop2desktop: convert(1500px)
 
 $grid-gap: $hunit !default
+
+$focus-box-shadow: 0 0 2px 2px !default
