--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -50,7 +50,13 @@ button
 input,
 textarea,
 button
-    background-color: darken(map-get($text-color, 'bg'), $text-bg-accent-darken)
+  background-color: darken(map-get($text-color, 'bg'), $text-bg-accent-darken)
+*:focus
+  outline-width: 0
+  box-shadow: $focus-box-shadow map-get($text-color, 'fg')
+
+textarea,
+button
 
 a
   text-decoration: none
