--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -1,9 +1,9 @@
 $text-size-lower-bound-px: 16 !default
 $text-size-upper-bound-px: 20 !default
 
-@function convert($value)
+@function px-to-rem($value)
   $remSize: $value / $text-size-upper-bound-px
-  @return #{$remSize}rem
+  @return $remSize*1rem
 
 $rem-grow-start-px: 500 !default
 $rem-grow-end-px: 1200 !default
@@ -48,8 +48,8 @@ $text-base-fontsize: $unit * 2 / $text-leading
 $head-base-fontsize: $unit * 2 / $head-leading
 
 $site-width: 48  * $hunit
-$phone2tablet: convert(600px)
-$tablet2laptop: convert(900px)
-$laptop2desktop: convert(1500px)
+$phone2tablet: px-to-rem(600)
+$tablet2laptop: px-to-rem(900)
+$laptop2desktop: px-to-rem(1500)
 
 $grid-gap: $hunit !default
