--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -24,9 +24,8 @@ $hunit: $optical-compensation * $unit
 // there are multiple colors sets. Every color set consists of foreground, 
 // background and accent. variants are generated on the fly
 
+$variant-diff: 8%
 $text-color: ( 'fg': #444, 'bg': #fff, 'accent': #555) !default
-$text-bg-accent-darken: 4%
-
 $primary-color: ( 'fg': #fff, 'bg': #3CACD3, 'accent': #fff) !default
 $secondary-color: ( 'fg': #fff, 'bg': #3DC18E, 'accent': #fff) !default
 $tertiary-color: ( 'fg': #fff, 'bg': #154150, 'accent': #fff) !default
