hover and focus state for elevated util

--- a/src/sass/utilities/_utility-export.sass
+++ b/src/sass/utilities/_utility-export.sass
@@ -41,3 +41,9 @@
 
 .elevated
     box-shadow: $elevated-shadow
+
+.focus\:elevated:focus
+    box-shadow: $elevated-shadow
+
+.hover\:elevated:hover
+    box-shadow: $elevated-shadow
