--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -70,13 +70,13 @@ $linear-channel-values: 0 .0003035269835488375 .000607053967097675 .000910580950
 
 
 @include color-combination('text', $text-color, 0%,  true)
-@include color-combination('text-variant', $text-color, $variant-diff, true)
+@include color-combination('text-alt', $text-color, $variant-diff, true)
 @include color-combination('prim', $primary-color, 0%, true)
-@include color-combination('prim-variant', $primary-color, $variant-diff, true)
+@include color-combination('prim-alt', $primary-color, $variant-diff, true)
 @include color-combination('sec', $secondary-color, 0%, true)
-@include color-combination('sec-variant', $secondary-color, $variant-diff, true)
+@include color-combination('sec-alt', $secondary-color, $variant-diff, true)
 @include color-combination('ter', $tertiary-color, 0%, true)
-@include color-combination('ter-variant', $tertiary-color, $variant-diff, true)
+@include color-combination('ter-alt', $tertiary-color, $variant-diff, true)
 @include color-combination('err', $error-color, 0%, true)
-@include color-combination('err', $error-color, $variant-diff, true)
+@include color-combination('err-alt', $error-color, $variant-diff, true)
 
