--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -44,19 +44,21 @@ button
   color: map-get($text-color, 'fg')
   font-size: $text-base-fontsize
   line-height: 2 * $unit
-  border-color: darken(map-get($text-color, 'bg'), $border-darken)
+  border-color: map-get($text-color, 'fg')
 
 *:focus
   outline-width: 0
   box-shadow: $focus-box-shadow map-get($text-color, 'fg')
 
+input,
 textarea,
 button
+  background-color: create_variant(map-get($text-color, 'bg'), $variant-diff)
 
 a
   text-decoration: none
   color: map-get($text-color, 'accent')
-  border-color: darken(map-get($text-color, 'bg'), $border-darken)
+  border-color: map-get($text-color, 'fg')
 
 // Headings
 h1,
