--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -54,6 +54,7 @@ input,
 textarea,
 button
   background-color: create_variant(map-get($text-color, 'bg'), $variant-diff)
+  transition: all $color-transition-delay ease
 
 a
   text-decoration: none
