--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -53,3 +53,4 @@ $laptop2desktop: px-to-rem(1500)
 $grid-gap: $hunit !default
 
 $focus-box-shadow: 0 0 2px 2px !default
+$color-transition-delay: 0.2s
